--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,17 @@
- {%extends 'base.html'%}
-  
-{% block head%} 
+{%extends 'base.html'%}
+
+{% block head%}
 <title>
     New Flask App
 </title>
 {%endblock%}
 
-{% block body%} 
-<div class="container">
-    <h1>
-        Stay home stay safe!!
-    </h1>
+{% block body%}
+<div class="row">
+    <div class="container">
+        <h1>
+            Stay home stay safe!!
+        </h1>
+    </div>
 </div>
 {%endblock%}
