--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,45 @@
 
 {% block head%}
 <title>
-    New Flask App
+    TODO
 </title>
 {%endblock%}
 
 {% block body%}
-<div class="row">
-    <div class="container">
-        <h1>
-            Stay home stay safe!!
-        </h1>
+
+<div class="container">
+    <div class="content">
+        <h1>Task Master</h1>
     </div>
+    <table class="striped">
+        <thead>
+            <tr>
+                <th>Task</th>
+                <th>Added</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td>
+                    <a class="waves-effect waves-light btn" href="">Delete</a>
+                    <br>
+                    <br>
+
+                    <a class="waves-effect waves-light btn" href="">Update</a>
+
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <form action="/" method="POST">
+        <input type="text" name="content" id="content">
+        <input type="submit" value="Add Task">
+
+    </form>
+
 </div>
 {%endblock%}
