--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,10 @@
         </thead>
 
         <tbody>
+            {% for task in tasks %}
             <tr>
-                <td></td>
-                <td></td>
+                <td>{{task.content}}</td>
+                <td>{{task.date_created.date()}}</td>
                 <td>
                     <a class="waves-effect waves-light btn" href="">Delete</a>
                     <br>
@@ -34,6 +35,7 @@
 
                 </td>
             </tr>
+            {% endfor %}
         </tbody>
     </table>
     <form action="/" method="POST">
