create the delete route
- the delete is now alive and it actually delets the content from the db

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                 <td>{{task.content}}</td>
                 <td>{{task.date_created.date()}}</td>
                 <td>
-                    <a class="waves-effect waves-light btn" href="">Delete</a>
+                    <a class="waves-effect waves-light btn" href="/delete/{{task.id}}">Delete</a>
                     <br>
                     <br>
 
