create the update route
- allows user to update the  task

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                     <br>
                     <br>
 
-                    <a class="waves-effect waves-light btn" href="">Update</a>
+                    <a class="waves-effect waves-light btn" href="/update/{{task.id}}">Update</a>
 
                 </td>
             </tr>
