--- a/templates/update.html
+++ b/templates/update.html
@@ -12,8 +12,8 @@
     <div class="content">
         <h1>Update task</h1>
     </div>
-    <form action="/update/{{task.id}}" method="POST">
-        <input type="text" name="content" id="content" value="{{task.content}}">
+    <form action="/update/{{task_update.id}}" method="POST">
+        <input type="text" name="content" id="content" value="{{task_update.content}}">
         <input type="submit" value="Update">
 
     </form>
