--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,10 @@
 <div class="container">
     <div class="content">
         <h1>Task Master</h1>
+        {% if tasks| length < 1  %}
+        <h4>No task posted</h4>
     </div>
+    {%else%}
     <table class="striped">
         <thead>
             <tr>
@@ -38,6 +41,7 @@
             {% endfor %}
         </tbody>
     </table>
+    {%endif%}
     <form action="/" method="POST">
         <input type="text" name="content" id="content">
         <input type="submit" value="Add Task">
