--- a/templates/index.html
+++ b/templates/index.html
@@ -31,9 +31,6 @@
                 <td>{{task.date_created.date()}}</td>
                 <td>
                     <a class="waves-effect waves-light btn" href="/delete/{{task.id}}">Delete</a>
-                    <br>
-                    <br>
-
                     <a class="waves-effect waves-light btn" href="/update/{{task.id}}">Update</a>
 
                 </td>
@@ -43,8 +40,11 @@
     </table>
     {%endif%}
     <form action="/" method="POST">
-        <input type="text" name="content" id="content">
-        <input type="submit" value="Add Task">
+        <input placeholder="Enter the task " id="content" type="text" name="content" class="validate">
+
+        <button class="btn waves-effect waves-light" type="submit" name="action">Add Task
+            <i class="material-icons left">send</i>
+        </button>
 
     </form>
 
