--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,18 @@
-/* body{
-    margin: 50px;
-} */
+body{
+    font-family: 'Roboto Condensed', sans-serif;
+
+}
+.page-footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    padding: 10px 10px 10px;    
+}
+input[type='text'] {  
+    font-family: 'Roboto Condensed', sans-serif; 
+}
+brand-logo{
+    text-align: center;
+}
