--- a/TODO/templates/index.html
+++ b/TODO/templates/index.html
@@ -14,12 +14,12 @@
         <h4>No task posted</h4>
     </div>
     {%else%}
-    <table class="striped">
+    <table class="table table-striped">
         <thead>
             <tr>
-                <th>Task</th>
-                <th>Added</th>
-                <th>Actions</th>
+                <th scope="col">Task</th>
+                <th scope="col">Added</th>
+                <th scope="col">Actions</th>
             </tr>
         </thead>
 
@@ -29,8 +29,8 @@
                 <td>{{task.content}}</td>
                 <td>{{task.date_created.date()}}</td>
                 <td>
-                    <a class="waves-effect waves-light btn" href="/delete/{{task.id}}">Delete</a>
-                    <a class="waves-effect waves-light btn" href="/update/{{task.id}}">Update</a>
+                    <a class="btn btn-danger" href="/delete/{{task.id}}">Delete</a>
+                    <a class="btn btn-primary" href="/update/{{task.id}}">Update</a>
 
                 </td>
             </tr>
@@ -39,11 +39,13 @@
     </table>
     {%endif%}
     <form action="/" method="POST">
-        <input placeholder="Enter the task " id="content" type="text" name="content" class="validate">
-
-        <button class="btn waves-effect waves-light" type="submit" name="action">Add Task
-            <i class="material-icons left">send</i>
+        <div class="form-group">
+        <input placeholder="Enter the task " id="content" type="text" name="content" class="form-control">
+        </div>
+        <div class="form-group">
+        <button class="btn btn-primary" type="submit" name="action">Add Task
         </button>
+    </div>
 
     </form>
 
