--- a/TODO/templates/update.html
+++ b/TODO/templates/update.html
@@ -13,11 +13,14 @@
         <h1>Update task</h1>
     </div>
     <form action="/update/{{task_update.id}}" method="POST">
-        <input id="content" type="text" name="content" class="validate" value="{{task_update.content}}">
-
-        <button class="btn waves-effect waves-light" type="submit" name="action">Update
-            <i class="material-icons left">send</i>
-        </button>
+        <div class="form-group">
+        <input id="content" type="text" name="content" class="form-control" value="{{task_update.content}}">
+        </div>
+        <div class="form-group">
+            <button class="btn btn-primary" type="submit" name="action">Update
+            </button>
+        </div>
+        
     </form>
 
 </div>
