--- a/TODO/templates/base.html
+++ b/TODO/templates/base.html
@@ -19,6 +19,19 @@
         <span class="navbar-brand mb-0 h1">TaskManager</span>
       </nav>
         {%block body%}{%endblock%}
+        <div class="container">
+          <div class="row">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                  {{ message }}
+                </div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
+          </div>
+        </div>
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
