--- a/TODO/templates/base.html
+++ b/TODO/templates/base.html
@@ -21,6 +21,7 @@
         {%block body%}{%endblock%}
         <div class="container">
           <div class="row">
+          <div class="col-md-8">
             {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
@@ -31,6 +32,7 @@
             {% endif %}
           {% endwith %}
           </div>
+        </div>
         </div>
     
     <!-- Optional JavaScript -->
