add login_required decorator
- login_required decorator will enusre that if the use is not logged in it won't redirect to home page.
Signed-off-by: Pratik-Sys <pithore.pratik@gmail.com>

--- a/TODO/templates/index.html
+++ b/TODO/templates/index.html
@@ -18,7 +18,7 @@
         <thead>
             <tr>
                 <th scope="col">Task</th>
-                <th scope="col">Added</th>
+                <th scope="col">Date</th>
                 <th scope="col">Actions</th>
             </tr>
         </thead>
