--- a/TODO/templates/base.html
+++ b/TODO/templates/base.html
@@ -20,6 +20,8 @@
         <div class="navbar-nav mr-auto"></div>
         {% if current_user.is_authenticated %}
         <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+        <a class="nav-item nav-link" href="{{ url_for('post') }}">Add Task</a>
+
       {% else %}
         <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
         <a class="nav-item nav-link" href="{{ url_for('signup') }}">Register</a>
