--- a/TODO/templates/base.html
+++ b/TODO/templates/base.html
@@ -15,8 +15,8 @@
     {%block head%}{%endblock%}
   </head>
   <body>
-    <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">TaskManager</span>
+    <nav class="navbar ">
+        <span class="navbar-brand mb-0 h1 ">TaskManager</span>
         <div class="navbar-nav mr-auto"></div>
         {% if current_user.is_authenticated %}
         <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
@@ -28,10 +28,8 @@
       {% endif %}
     </div>
       </nav>
-        {%block body%}{%endblock%}
-        <div class="container">
           <div class="row">
-          <div class="col-md-8">
+          <div class="col">
             {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
@@ -43,7 +41,7 @@
           {% endwith %}
           </div>
         </div>
-        </div>
+        {%block body%}{%endblock%}
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
