--- a/TODO/templates/home.html
+++ b/TODO/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block head%}
 <title>
-    Test Todo
+    Todo
 </title>
 {%endblock%}
 
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="row">
         <div class="col-8">
-            <table class="table table-stripped">
+            <table class="table table-striped">
                 <thead>
                     <tr>
                         <th scope="col">Task</th>
