--- a/TODO/templates/update.html
+++ b/TODO/templates/update.html
@@ -1,27 +1,26 @@
-{%extends 'base.html'%}
+{% extends 'base.html' %}
 
 {% block head%}
 <title>
-    TODO
+    Update Task
 </title>
 {%endblock%}
 
 {% block body%}
-
 <div class="container">
-    <div class="content">
-        <h1>Update task</h1>
+    <div class="row">
+        <div class="col-md">
+            <form method="POST" action="">
+                {{form.csfr_token}}
+                <div class="form-group">
+                    {{form.content.label(class="form-control-label")}}
+                        {{form.content(class="form-control")}}
+                </div>
+                <div class="form-group">
+                    {{form.submit(class="btn btn-primary")}}
+                </div>
+        </form>
+        </div>
     </div>
-    <form action="/update/{{task_update.id}}" method="POST">
-        <div class="form-group">
-        <input id="content" type="text" name="content" class="form-control" value="{{task_update.content}}">
-        </div>
-        <div class="form-group">
-            <button class="btn btn-primary" type="submit" name="action">Update
-            </button>
-        </div>
-        
-    </form>
-
 </div>
 {%endblock%}
