--- a/Todo/static/style.css
+++ b/Todo/static/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Roboto Condensed', sans-serif;
+    background-color: #4e342e;
 
 }
 .page-footer{
@@ -17,16 +18,40 @@ brand-logo{
     text-align: center;
 }
 .navbar{
-    background-color: #880e4f;
+    background-color:#00acc1;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
 }
 .nav-link{
     color: #ffffff;
 }
 
 .nav-link:hover{
+    border-radius: 3px;
     background-color: white;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    
 }
 .navbar-brand{
+    text-indent: 40rem;
     color: #ffffff;
     font-size: 150%;
+
+}
+
+.card{
+    display: inline-block;
+    position: relative;
+    border-radius:5px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.nav-item{
+    color: white;
+}
+table{
+    border-radius: 2px;
+    background-color: white;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    
+
 }
