--- a/Todo/templates/register.html
+++ b/Todo/templates/register.html
@@ -1,59 +1,48 @@
-{%extends 'base.html'%}
-
-{% block head%}
-<title>
-    Sign Up
-</title>
-{%endblock%}
-
-{% block body%}
-<div class="container">
-    <div class="row">
+{%extends 'base.html'%} {% block head%}
+<title>Sign Up</title>
+{%endblock%} {% block body%}
+<div class="container" style="margin-top: 8rem">
+  <div class="row d-flex justify-content-center">
+    <div class="card" style="width: 25rem">
+      <div class="card-body">
         <form method="POST" action="">
-            {{form.csfr_token}}
-            <div class="form-group">
-                {{form.username.label(class="form-control-label")}}
-                {% if form.username.errors %}
-                    {{form.username(class="form-control is-invalid")}}
-                    <div class="invalid-feedback">
-                        {% for error in form.username.errors %}
-                            <span>{{error}}</span>
-                        {% endfor %}   
-                    </div>
-                {% else %}
-                    {{form.username(class="form-control")}}
-                {% endif %}                
+          {{form.csfr_token}}
+          <div class="form-group">
+            {{form.username.label(class="form-control-label")}} {% if
+            form.username.errors %} {{form.username(class="form-control
+            is-invalid")}}
+            <div class="invalid-feedback">
+              {% for error in form.username.errors %}
+              <span>{{error}}</span>
+              {% endfor %}
             </div>
-            <div class="form-group">
-                {{form.email.label(class="form-control-label")}}
-                {% if form.email.errors %}
-                    {{form.email(class="form-control is-invalid")}}
-                    <div class="invalid-feedback">
-                        {% for error in form.email.errors %}
-                            <span>{{error}}</span>
-                        {% endfor %}   
-                    </div>
-                {% else %}
-                    {{form.email(class="form-control")}}
-                {% endif %}                
+            {% else %} {{form.username(class="form-control")}} {% endif %}
+          </div>
+          <div class="form-group">
+            {{form.email.label(class="form-control-label")}} {% if
+            form.email.errors %} {{form.email(class="form-control is-invalid")}}
+            <div class="invalid-feedback">
+              {% for error in form.email.errors %}
+              <span>{{error}}</span>
+              {% endfor %}
             </div>
-            <div class="form-group">
-                {{form.password.label(class="form-control-label")}}
-                {% if form.password.errors %}
-                    {{form.password(class="form-control is-invalid")}}
-                    <div class="invalid-feedback">
-                        {% for error in form.password.errors %}
-                            <span>{{error}}</span>
-                        {% endfor %}   
-                    </div>
-                {% else %}
-                    {{form.password(class="form-control")}}
-                {% endif %}                
+            {% else %} {{form.email(class="form-control")}} {% endif %}
+          </div>
+          <div class="form-group">
+            {{form.password.label(class="form-control-label")}} {% if
+            form.password.errors %} {{form.password(class="form-control
+            is-invalid")}}
+            <div class="invalid-feedback">
+              {% for error in form.password.errors %}
+              <span>{{error}}</span>
+              {% endfor %}
             </div>
-            <div class="form-group">
-                {{form.submit(class="btn btn-primary")}}
-            </div>
+            {% else %} {{form.password(class="form-control")}} {% endif %}
+          </div>
+          <div class="form-group">{{form.submit(class="btn btn-primary")}}</div>
         </form>
+      </div>
     </div>
+  </div>
 </div>
 {%endblock%}
