--- a/Todo/templates/base.html
+++ b/Todo/templates/base.html
@@ -15,8 +15,8 @@
     {%block head%}{%endblock%}
   </head>
   <body>
-    <nav class="navbar ">
-        <span class="navbar-brand mb-0 h1 ">TaskManager</span>
+    <nav class="navbar justify-content-centet">
+        <span class="navbar-brand">TaskManager</span>
         <div class="navbar-nav mr-auto"></div>
         {% if current_user.is_authenticated %}
         <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
@@ -28,18 +28,17 @@
       {% endif %}
     </div>
       </nav>
-          <div class="row">
-          <div class="col">
+      <br>
+          <div class="row justify-content-center">
             {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
+                <div class="alert alert-{{ category }}" >
                   {{ message }}
                 </div>
               {% endfor %}
             {% endif %}
           {% endwith %}
-          </div>
         </div>
         {%block body%}{%endblock%}
     
