--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -7,10 +7,10 @@
 {%endblock%}
 
 {% block body%}
-<div class="container">
-    <div class="row">
+<div class="container" style="margin-top: 8rem;">
+    <div class="row d-flex justify-content-center">
         <div class="col-8">
-            <table class="table table-striped">
+            <table class=" table table-striped">
                 <thead>
                     <tr>
                         <th scope="col">Task</th>
@@ -22,7 +22,7 @@
                     {% for task in tasks %}
 
                     <tr>
-                        {% if task.author ==current_user %}
+                        {% if task.author==current_user %}
                         <td>{{task.content}}</td>
                         <td>{{task.date_created.date()}}</td>
                         <td>
