--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -26,7 +26,7 @@
                         <td>{{task.content}}</td>
                         <td>{{task.date_created.date()}}</td>
                         <td>
-                            <a class="btn btn-danger" href="/delete/{{task.id}}">Delete</a>
+                            <a class="btn btn-danger" style="margin-right: 10px;" href="/delete/{{task.id}}">Delete</a>
                             <a class="btn btn-primary" href="/update/{{task.id}}">Update</a>
         
                         </td>
