--- a/Todo/templates/post.html
+++ b/Todo/templates/post.html
@@ -13,7 +13,9 @@
             <form method="POST" action="">
                 {{form.csfr_token}}
                 <div class="form-group">
-                    {{form.content.label(class="form-control-label")}}
+                    <h2 style="color: white;" >
+                        {{form.content.label(class="form-control-label")}}
+                    </h2>
                         {{form.content(class="form-control")}}
                 </div>
                 <div class="form-group">
