--- a/Todo/static/style.css
+++ b/Todo/static/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'B612', sans-serif;
     background-color: #4e342e;
 
 }
@@ -12,7 +12,7 @@ body{
     padding: 10px 10px 10px;    
 }
 input[type='text'] {  
-    font-family: 'Roboto Condensed', sans-serif; 
+    font-family: 'B612', sans-serif;
 }
 brand-logo{
     text-align: center;
@@ -55,11 +55,11 @@ table{
     transition: background-color 0.5s ease;
 
 }
-td {
+/* td {
     max-width:100px;
     width:auto;
     min-width:10px;
-    }
+    } */
 
 /* .fa-trash-alt{
     color: red;
