--- a/Todo/templates/base.html
+++ b/Todo/templates/base.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=B612&display=swap" rel="stylesheet">  
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,7 +17,7 @@
   </head>
   <body>
     <nav class="navbar justify-content-centet">
-        <span class="navbar-brand">TaskManager</span>
+        <a class="navbar-brand" href="{{url_for('home')}}" style="font-family: 'B612', sans-serif; color: #ecff3c;">TASK MANAGER</a>
         <div class="navbar-nav mr-auto"></div>
         {% if current_user.is_authenticated %}
         <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
