--- a/Todo/static/style.css
+++ b/Todo/static/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'B612', sans-serif;
+    font-size: medium;
     background-color: #4e342e;
 
 }
@@ -14,14 +15,15 @@ body{
 input[type='text'] {  
     font-family: 'B612', sans-serif;
 }
-brand-logo{
+/* brand-logo{
     text-align: center;
-}
+} */
+
 .navbar{
     background-color:#00acc1;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
-}
+
 .nav-link{
     color: #ffffff;
 }
@@ -68,4 +70,9 @@ table{
     color: red;
     text-shadow: 0 0 2px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);; 
 
+} */
+/* .li{
+    max-width: 50px;
+    width: auto;
+    min-width: 10px;
 } */
