--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -14,7 +14,11 @@
                 {%for task in tasks%}
                 {%if task.author==current_user%}
                 <li class="list-group-item">
-                    {{task.content}}
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                        <label class="form-check-label" for="defaultCheck1">
+                            {{task.content}}
+                            </label>
                 </li>
                 {%endif%}
                 {%endfor%}
