--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -7,6 +7,18 @@
 {%endblock%}
 
 {% block body%}
+<nav class="navbar">
+    <a class="navbar-brand" href="{{url_for('home')}}">TASK MANAGER</a>
+    <div class="navbar-nav mr-auto"></div>
+    {% if current_user.is_authenticated %}
+    <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+    <a class="nav-item nav-link" href="{{ url_for('post') }}">Add Task</a>
+  {% else %}
+    <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+    <a class="nav-item nav-link" href="{{ url_for('signup') }}">Register</a>
+  {% endif %}
+</div>
+  </nav>
 <div class="container" style="margin-top: 8rem;">
     <div class="row d-flex justify-content-center">
         <div class="col-lg-6 col-md-6">
@@ -15,8 +27,8 @@
                 {%if task.author==current_user%}
                 <li class="list-group-item">
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-label" for="defaultCheck1">
+                        <input class="form-check-input" type="checkbox">
+                        <label class="form-check-label">
                             {{task.content}}
                             </label>
                 </li>
