--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -7,8 +7,8 @@
 {%endblock%}
 
 {% block body%}
-<nav class="navbar">
-    <a class="navbar-brand" href="{{url_for('home')}}">TASK MANAGER</a>
+<nav class="navbar navbr-fixed-top">
+    <a class="navbar-brand" href="{{url_for('home')}}" style="color: blanchedalmond;">TASK MANAGER</a>
     <div class="navbar-nav mr-auto"></div>
     {% if current_user.is_authenticated %}
     <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
@@ -31,9 +31,18 @@
                         <label class="form-check-label">
                             {{task.content}}
                             </label>
+                            <a href="/update/{{task.id}}">
+                                <i class="far fa-edit float-right" ></i>
+                            </a>
+                                   
+                            <a href="/delete/{{task.id}}">
+                                <i class="fas fa-trash float-right"></i>
+                            
+                            </a>
                 </li>
                 {%endif%}
                 {%endfor%}
+
             </ul>
         </div>
     </div>
