--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -13,37 +13,48 @@
     {% if current_user.is_authenticated %}
     <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
     <a class="nav-item nav-link" href="{{ url_for('post') }}">Add Task</a>
-  {% else %}
+    {% else %}
     <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
     <a class="nav-item nav-link" href="{{ url_for('signup') }}">Register</a>
-  {% endif %}
-</div>
-  </nav>
+    {% endif %}
+    </div>
+</nav>
 <div class="container" style="margin-top: 8rem;">
     <div class="row d-flex justify-content-center">
         <div class="col-lg-6 col-md-6">
-            <ul class="list-group">
-                {%for task in tasks%}
-                {%if task.author==current_user%}
-                <li class="list-group-item">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox">
-                        <label class="form-check-label">
-                            {{task.content}}
-                            </label>
-                            <a href="/update/{{task.id}}">
-                                <i class="far fa-edit float-right" ></i>
-                            </a>
-                                   
-                            <a href="/delete/{{task.id}}">
-                                <i class="fas fa-trash float-right"></i>
+            <div class="table-responsive-md">
+                <table class="table table-borderless" style="background-color: white;">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Task</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Update</th>
+                            <th scope="col">Delete</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {%for task in tasks%}
+                        <tr>
+                            {%if task.author==current_user%}
+                            <td>{{task.id}}</td>
+                            <td>{{task.content}}</td>
+                            <td>{{task.date_created.date()}}</td>
+                            <td>
+                                <a class="btn btn-primary" data-toggle="modal" 
+                                data-target="#out{{task.id}}">Update</a>
+                            </td>
+                            <td>
+                                <a class="btn btn-danger" style="margin-right: 10px;"
+                                    href="/delete/{{task.id}}">Delete</a>
+                            </td>
                             
-                            </a>
-                </li>
-                {%endif%}
-                {%endfor%}
-
-            </ul>
+                            {%endif%}
+                        </tr>
+                        {%endfor%}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
