--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -22,6 +22,11 @@
 <div class="container" style="margin-top: 8rem;">
     <div class="row d-flex justify-content-center">
         <div class="col-lg-6 col-md-6">
+            {% if tasks == []%}
+            <div class="alert alert-warning" role="alert">
+                No Tasks available
+            </div>
+            {%else%}
             <div class="table-responsive-md">
                 <table class="table table-borderless" style="background-color: white;">
                     <thead>
@@ -49,11 +54,13 @@
                                     href="/delete/{{task.id}}">Delete</a>
                             </td>
                             
+                            
                             {%endif%}
                         </tr>
                         {%endfor%}
                     </tbody>
                 </table>
+                {%endif%}
             </div>
         </div>
     </div>
