update the update template and some css changes

--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -49,7 +49,7 @@
                             <td>{{task.content}}</td>
                             <td>{{task.date_created.date()}}</td>
                             <td>
-                                <a class="btn btn-primary" data-toggle="modal" 
+                                <a class="btn btn-primary"
                                 href="/update/{{task.id}}">Update</a>
                             </td>
                             <td>
