--- a/Todo/static/style.css
+++ b/Todo/static/style.css
@@ -110,3 +110,14 @@ input[type=checkbox]:checked + label.form-check-label{
 .alert{
     margin-bottom: 0;
 }
+.navbar-brand{
+    color: #ECF0F5;
+}
+.navbar-brand:hover{
+    color: #ECF0F5;
+}
+.nav-link{
+    color:black;
+}
+.nav-link:hover{
+    color:black;
