--- a/Todo/templates/update.html
+++ b/Todo/templates/update.html
@@ -8,8 +8,8 @@
 
 {% block body%}
 <div class="container">
-    <div class="row">
-        <div class="col-md">
+    <div class="row d-flex justify-content-center">
+        <div class="col-lg-6 col-md-6">
             <form method="POST" action="">
                 {{form.csfr_token}}
                 <div class="form-group">
