--- a/Todo/static/style.css
+++ b/Todo/static/style.css
@@ -1,6 +1,5 @@
 body{
-    font-family: 'Roboto', sans-serif;
-    font-size: medium;
+    font-family: 'Fira Sans', sans-serif;
     background-color:aliceblue;
 
 }
