--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -1,105 +1,124 @@
-{% extends 'base.html' %}
-{% block head%}
-<title>
-    Todo
-</title>
-{%endblock%}
-
-{% block nav%}
+{% extends 'base.html' %} {% block head%}
+<title>Todo</title>
+{%endblock%} {% block nav%}
 <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{{url_for('main.home')}}">
-      <img src="{{url_for('static',filename='task.jpg')}}" width="30" height="30" class="d-inline-block align-top" alt="">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">
+      <img
+        src="{{url_for('static',filename='task.jpg')}}"
+        width="30"
+        height="30"
+        class="d-inline-block align-top"
+        alt=""
+      />
       Todo
     </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" href="{{ url_for('todos.post') }}">Add Task</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Welcome! {{current_user.username.capitalize()}}
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="{{ url_for('users.logout')}}">Logout</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div
+      class="collapse navbar-collapse justify-content-end"
+      id="navbarNavDropdown"
+    >
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="{{ url_for('todos.post') }}"
+            >Add Task</a
+          >
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link active dropdown-toggle"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Welcome! {{current_user.username.capitalize()}}
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li>
+              <a class="dropdown-item" href="{{ url_for('users.logout')}}"
+                >Logout</a
+              >
+            </li>
+          </ul>
+        </li>
+      </ul>
     </div>
-  </nav>
-  {%endblock%}
-
-  {% block body%}
-  {% if tasks == []%}
-  <div class="alert alert-warning" role="alert">
-      No Tasks available
   </div>
-  {%else%}
-  <ul class="list-group">
-    {% for task in tasks%}
-      {% if task.author == current_user%}
-      <li class="list-group-item d-flex justify-content-between">
-        <div class="form-check">
-          <input class="form-check-input" {{"checked" if task.flag else "" }} type="checkbox" value="{{task.id}}" id="flexCheckDefault"  onchange="popAlert(this)">
-          <label class="form-check-label strikethrough" for="flexCheckDefault">
-            {{task.content}}
-          </label>
-        </div>
-        <div class="form-buttons">
-          <a href="/update/{{task.id}}">
-            <button type="button" class="btn btn-primary" id={{task.id}}>Update</button>
-          </a>
-          <a href="/delete/{{task.id}}">
-            <button type="button" class="btn btn-danger" id={{task.id}}>Delete</button>
-          </a>
-        </div>
-       </li>
-      {%endif%}
-    {%endfor%}
-  </ul>
-  {%endif%}
-  <script>
-    function popAlert(elm){
-      if(elm.checked){
-        var newstr = elm.value
-        var flag  = true
-      }
-      else{
-        var newstr = elm.value
-        var flag  = false
-      }
-      var entry = {
-        value : newstr,
-        Flag : flag
-      };
-      fetch(`${window.origin}/getValues`,{
-        method: "POST",
-        credentials: "include",
-        body:JSON.stringify(entry),
-        cache:"no-cache",
-        headers: new Headers({
-          "content-type":"aplication/json"
-        })
-      })
-      .then(function(response){
-        if (response.status !== 200 ){
+</nav>
+{%endblock%} {% block body%}
+<ul class="list-group list-group-flush">
+  {% for task in tasks%} {% if task.author == current_user%}
+  <li class="list-group-item d-flex justify-content-between">
+    <div class="form-check">
+      <input class="form-check-input" {{"checked" if task.flag else "" }}
+      type="checkbox" value="{{task.id}}" id="flexCheckDefault"
+      onchange="popAlert(this)">
+      <label class="form-check-label strikethrough" for="flexCheckDefault">
+        {{task.content}}
+      </label>
+    </div>
+    <div class="form-buttons">
+      <a href="/update/{{task.id}}">
+        <button type="button" class="btn btn-primary" id="{{task.id}}">
+          Update
+        </button>
+      </a>
+      <a href="/delete/{{task.id}}">
+        <button type="button" class="btn btn-danger" id="{{task.id}}">
+          Delete
+        </button>
+      </a>
+    </div>
+  </li>
+  {%endif%} {%endfor%}
+</ul>
+<script>
+  function popAlert(elm) {
+    if (elm.checked) {
+      var newstr = elm.value;
+      var flag = true;
+    } else {
+      var newstr = elm.value;
+      var flag = false;
+    }
+    var entry = {
+      value: newstr,
+      Flag: flag,
+    };
+    fetch(`${window.origin}/getValues`, {
+      method: "POST",
+      credentials: "include",
+      body: JSON.stringify(entry),
+      cache: "no-cache",
+      headers: new Headers({
+        "content-type": "aplication/json",
+      }),
+    })
+      .then(function (response) {
+        if (response.status !== 200) {
           console.log(`Response status is : ${response.status}`);
           return;
         }
-        response.json().then(function(data){
-          console.log(data)
-        })
+        response.json().then(function (data) {
+          console.log(data);
+        });
+      })
+      .catch(function (err) {
+        console.log(err);
+      });
+  }
+</script>
 
-      })
-      .catch(function(err){
-        console.log(err)
-      })
-    };
-  </script>
-  
 {%endblock%}
