--- a/Todo/templates/post.html
+++ b/Todo/templates/post.html
@@ -1,20 +1,12 @@
-{% extends 'base.html' %}
-
-{% block head%}
-<title>
-    Post Task
-</title>
-{%endblock%}
-
-{% block body%}
+{% extends 'base.html' %} {% block head%}
+<title>Post Task</title>
+{%endblock%} {% block body%}
 <form method="POST">
-    {{form.csfr_token}}
-    <div class="form-group">
-            {{form.content.label(class="form-control-label")}}
-            {{form.content(class="form-control")}}    
-    </div>
-    <div class="form-group">
-        {{form.submit(class="btn btn-primary")}}
-    </div>
+  {{form.csfr_token}}
+  <div class="mb-2">
+    {{form.content.label(class="form-control-label")}}
+    {{form.content(class="form-control",type="text")}}
+  </div>
+  {{form.submit(class="btn btn-primary")}}
 </form>
 {%endblock%}
