--- a/Todo/templates/login.html
+++ b/Todo/templates/login.html
@@ -1,48 +1,44 @@
-{%extends 'base.html'%}
-{% block head%}
+{%extends 'base.html'%} {% block head%}
 <title>Sign In|TODO</title>
-{%endblock%} 
-{% block body%}
+{%endblock%} {% block body%}
 <legend class="d-flex justify-content-center">
   <a>
-    <img src="{{url_for('static', filename='task.jpg')}}" style="height:2cm; width:2cm;">  
-    Todo
+    <img
+      src="{{url_for('static', filename='task.jpg')}}"
+      style="height: 2cm; width: 2cm"
+    />
   </a>
-
 </legend>
-<div class="card">
-  <div class="card-body">
-    <h4 class="card-title">
-      Sign In
-    </h4>
-    <form method="POST" action="">
-      {{form.csfr_token}}
-      <div class="form-group">
-        {{form.email.label(class="form-control-label")}} {% if
-        form.email.errors %} {{form.email(class="form-control is-invalid")}}
-        <div class="invalid-feedback">
-          {% for error in form.email.errors %}
-          <span>{{error}}</span>
-          {% endfor %}
-        </div>
-        {% else %} {{form.email(class="form-control", type='text')}} {% endif %}
+<div class="row">
+  <h3 class="mb-3 d-flex justify-content-center">Sign In</h3>
+  <form method="POST" action="">
+    {{form.csfr_token}}
+    <div class="mb-3">
+      {{form.email.label(class="form-control-label")}} {% if form.email.errors
+      %} {{form.email(class="form-control is-invalid")}}
+      <div class="invalid-feedback">
+        {% for error in form.email.errors %}
+        <span>{{error}}</span>
+        {% endfor %}
       </div>
-      <div class="form-group">
-        {{form.password.label(class="form-control-label")}} {% if
-        form.password.errors %} {{form.password(class="form-control
-        is-invalid")}}
-        <div class="invalid-feedback">
-          {% for error in form.password.errors %}
-          <span>{{error}}</span>
-          {% endfor %}
-        </div>
-        {% else %} {{form.password(class="form-control",type='password')}} {% endif %}
+      {% else %} {{form.email(class="form-control", type="email")}} {% endif %}
+    </div>
+    <div class="mb-3">
+      {{form.password.label(class="form-control-label")}} {% if
+      form.password.errors %} {{form.password(class="form-control is-invalid")}}
+      <div class="invalid-feedback">
+        {% for error in form.password.errors %}
+        <span>{{error}}</span>
+        {% endfor %}
       </div>
-      <div class="form-group text-center">{{form.submit(class="btn btn-primary-outline")}}</div>
-    </form>
-  </div>
-  <div class="form-group mb-0">
-    <p class="text-center text-muted">Need An Account? <a href="{{url_for('users.signup')}}" id="signup">Sign Up Now</a></p>
- </div>
+      {% else %} {{form.password(class="form-control",type="password")}} {%
+      endif %}
+    </div>
+    <div class="mb-3 text-center">{{form.submit(class="btn btn-primary")}}</div>
+  </form>
 </div>
+<p class="text-center text-muted">
+  Need An Account?
+  <a href="{{url_for('users.signup')}}" id="signup">Sign Up Now</a>
+</p>
 {%endblock%}
