--- a/Todo/templates/update.html
+++ b/Todo/templates/update.html
@@ -1,23 +1,12 @@
-{% extends 'base.html' %}
-
-{% block head%}
-<title>
-    Update Task
-</title>
-{%endblock%}
-
-{% block body%}
+{% extends 'base.html' %} {% block head%}
+<title>Update Task</title>
+{%endblock%} {% block body%}
 <form method="POST" action="">
-    {{form.csfr_token}}
-    <div class="form-group">
-        <h2 style="color: white;">
-            {{form.content.label(class="form-control-label")}}
-        </h2>
-        
-            {{form.content(class="form-control")}}
-    </div>
-    <div class="form-group">
-        {{form.submit(class="btn btn-primary")}}
-    </div>
+  {{form.csfr_token}}
+  <div class="mb-2">
+    {{form.content.label(class="form-control-label")}}
+    {{form.content(class="form-control", type="text")}}
+  </div>
+  {{form.submit(class="btn btn-primary")}}
 </form>
 {%endblock%}
